# AnimeScraper

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.md  README.md  api.rst  clannad_search.html  pyproject.toml  requirements.txt  t.py
.github/workflows/: python-publish.yml
AnimeScraper/: AnimeScraper.py  AsyncScraper.py  Scraper.py  SyncScraper.py  __init__.py  _cache_utils.py  _model.py  _parse_anime_data.py  animescraper_server.py  async_malscraper.py  cli.py  exceptions.py  malscraper.py  sync_malscraper.py
docs/: requirements.txt
docs/source/: AsyncScraper.rst  Scraper.rst  SyncScraper.rst  _model.rst  async_usage.rst  cli.rst  conf.py  index.rst  scrapers.rst  sync_usage.rst  usage.rst
tests/: test_anime_scraper.py
