[tool.poetry]
name = "AnimeScraper"
version = "1.1.1"
description = "A Simple library to get Anime and Character information. It scrapes all information from Myanimelist website."
authors = ["Muhammad MuQiT"]
readme = "README.md"
repository = "https://github.com/togashigreat/AnimeScraper"
homepage = "https://github.com/togashigreat/AnimeScraper"
license = "GPL-V3.0"
keywords = ["anime", "scraper", "myanimelist", "anime cli", "manga", "anime library", "api", "python anime"]
packages = [
    { include = "AnimeScraper" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.6"
beautifulsoup4 = "^4.12.1"
rapidfuzz = "^3.9.6"
httpx = "^0.28.0"
aiolimiter = "^1.2.0"
aiosqlite = "^0.20.0"
click = "^8.1.7"
pydantic = "^2.9.0"
pydantic-core = "2.23.4"
uvicorn = "0.32.1"

[tool.poetry.scripts]
animescraper = "AnimeScraper.cli:cli"  # <-- Register the CLI command

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
