[project]
name = "AnimeScraper"
version = "1.1.9"
description = "A Simple library to get Anime and Character information. It scrapes all information from MyAnimeList website."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"

authors = [
    { name = "Muhammad MuQiT" }
]

keywords = [
    "anime",
    "anime scraper",
    "myanimelist",
    "anime cli",
    "manga",
    "anime library",
    "anime api",
    "python anime",
    "fastapi",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "aiohttp>=3.11.6,<4",
    "beautifulsoup4>=4.12.1,<5",
    "httpx>=0.28.0,<1",
    "aiolimiter>=1.2.0,<2",
    "aiosqlite>=0.20.0,<1",
    "click>=8.1.7,<9",
]

[project.urls]
Homepage = "https://github.com/togashigreat/AnimeScraper"
Repository = "https://github.com/togashigreat/AnimeScraper"

[project.scripts]
animescraper = "AnimeScraper.cli:cli"

[project.optional-dependencies]
server = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.24.0,<1",
    "sphinx>=8.1.3,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "furo>=2024.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["AnimeScraper"]
